split up files, fight with threading/tasks, ensure self admin elevation in winodws work

--- a/KubeConnect/KubeConnect.csproj
+++ b/KubeConnect/KubeConnect.csproj
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+		<PackageReference Include="System.Security.Principal.Windows" Version="5.0.0" />
 	</ItemGroup>
 
 </Project>
