--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: windows-binary
-          file: publish/win/KubeConnect.exe
+          path: publish/win/KubeConnect.exe
           retention-days: 1
