--- a/KubeConnect/KubeConnect.csproj
+++ b/KubeConnect/KubeConnect.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -14,8 +14,8 @@
 		<PublishSingleFile>true</PublishSingleFile>
 		<TrimMode>Link</TrimMode>
 		<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
-		<IncludeSymbols>true</IncludeSymbols>
-		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<IncludeSymbols>false</IncludeSymbols>
+		<EmbedUntrackedSources>false</EmbedUntrackedSources>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -25,6 +25,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Yarp.ReverseProxy" Version="1.0.0-preview.12.21328.2" />
 	</ItemGroup>
 
 	<ItemGroup>
