--- a/KubeConnect/KubeConnect.csproj
+++ b/KubeConnect/KubeConnect.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks
+		<TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
 		<Company>Tocsoft</Company>
 		<Authors>Tocsoft</Authors>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -10,7 +10,9 @@
 		<ToolCommandName>kubeconnect</ToolCommandName>
 		<PackageOutputPath>./nupkg</PackageOutputPath>
 		<PackageId>Tocsoft.KubeConnect.Tool</PackageId>
-		<IsPackable>true</IsPackable> 
+		<IsPackable>true</IsPackable>
+		<LangVersion>latest</LangVersion>
+  		<RollForward>LatestMajor</RollForward>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
