support non-admin option when limiting changes to IP addresses only

--- a/KubeConnect/Properties/launchSettings.json
+++ b/KubeConnect/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "KubeConnect": {
       "commandName": "Project",
-      "commandLineArgs": "-x minikube"
+      "commandLineArgs": "-x minikube -skip-hosts -http-only"
     }
   }
 }
