--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,12 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
 
+      - name: Publish nuget tools
+        if: ${{ github.event_name == 'release' }}
+        shell: pwsh
+        run: |
+          dotnet nuget push ./publish/tool/*.nupkg -k {{ secrets.NUGET_API_KEY}}
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v2
         with:
