--- a/KubeConnect/KubeConnect.csproj
+++ b/KubeConnect/KubeConnect.csproj
@@ -29,7 +29,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-		<!--<PackageReference Include="KubernetesClient" Version="6.0.1" />-->
+		<PackageReference Include="KubernetesClient" Version="6.0.1" />
 		<PackageReference Include="MinVer" Version="2.5.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -39,7 +39,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\KubernetesClient\KubernetesClient.csproj" />
+	  <!--<ProjectReference Include="..\KubernetesClient\KubernetesClient.csproj" />-->
 	</ItemGroup>
 
 </Project>
