--- a/KubeConnect/Properties/launchSettings.json
+++ b/KubeConnect/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "profiles": {
     "KubeConnect": {
       "commandName": "Project",
+      "commandLineArgs": "-x minikube"
+    },
+    "KubeConnect-reduced": {
+      "commandName": "Project",
       "commandLineArgs": "-x minikube -skip-hosts -http-only"
     }
   }
