--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         if: ${{ github.event_name == 'release' }}
         shell: pwsh
         run: |
-          dotnet nuget push ./publish/tool/*.nupkg -k {{ secrets.NUGET_API_KEY}}
+          dotnet nuget push ./publish/tool/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }}
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v2
