--- a/KubeConnect/KubeConnect.csproj
+++ b/KubeConnect/KubeConnect.csproj
@@ -28,6 +28,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CliWrap" Version="3.4.0" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
 		<PackageReference Include="KubernetesClient" Version="6.0.1" />
 		<PackageReference Include="MinVer" Version="2.5.0">
@@ -35,6 +36,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="PipeMessenger" Version="0.9.3" />
+		<PackageReference Include="SSH.NET" Version="2020.0.1" />
 		<PackageReference Include="Yarp.ReverseProxy" Version="1.0.0-preview.12.21328.2" />
 	</ItemGroup>
 
