--- a/KubeConnect/Properties/launchSettings.json
+++ b/KubeConnect/Properties/launchSettings.json
@@ -14,7 +14,7 @@
     },
     "KubeConnect-bridge-as": {
       "commandName": "Project",
-      "commandLineArgs": "bridge --service service-name:5552 --envvar=-ASPNETCORE_URLS --working-directory=C:\\Source\\ -- dotnet run"
+      "commandLineArgs": "bridge --service landscape-explorer:5552 --envvar=-ASPNETCORE_URLS --working-directory C:\\Source\\Work\\Hubl.LandscapeExplorer\\src\\Hubl.LandscapeExplorer\\ -- dotnet run"
     },
     "KubeConnect-runas": {
       "commandName": "Project",
