--- a/KubeConnect/KubeConnect.csproj
+++ b/KubeConnect/KubeConnect.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+		<TargetFramework>net8.0</TargetFramework>
 		<Company>Tocsoft</Company>
 		<Authors>Tocsoft</Authors>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
