--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,34 +27,17 @@ jobs:
         shell: pwsh
         run: ./build.ps1
 
-      - name: Upload binaries to release
-        if: ${{ github.event_name == 'release' }}
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: publish/win/KubeConnect.exe
-          asset_name: 'KubeConnect.exe'
-          tag: ${{ github.ref }}
-          overwrite: true
-
-      - name: Publish nuget tools
+      - name: Publish to nuget
         if: ${{ github.event_name == 'release' }}
         shell: pwsh
         run: |
-          $pck = "$(Get-ChildItem .\publish\tool\*.nupkg | foreach {$_.FullName } | select -First 1)"
+          $pck = "$(Get-ChildItem .\publish\packages\*.nupkg | foreach {$_.FullName } | select -First 1)"
           Write-Host "publishing $pck"
           dotnet nuget push "$pck" --api-key "${{ secrets.NUGET_API_KEY }}" --source "https://api.nuget.org/v3/index.json"
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: windows-binary
-          path: publish/win/KubeConnect.exe
-          retention-days: 1
-
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
           name: dotnet-tool-pacakge
-          path: publish/tool/*.nupkg
+          path: publish/packages/*.nupkg
           retention-days: 1
