--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,5 +40,5 @@ jobs:
         run: |
           $files = Get-ChildItem ./publish/packages/ -name '*.nupkg'
           foreach ($file in $files){
-            dotnet nuget push --package "./publish/packages/$file" --api-key "${{ secrets.NUGET_API_KEY }}" --source "https://api.nuget.org/v3/index.json"  --skip-duplicate
+            dotnet nuget push "./publish/packages/$file" --api-key "${{ secrets.NUGET_API_KEY }}" --source "https://api.nuget.org/v3/index.json"  --skip-duplicate
           }
